# torch-mlir

./: development.md  requirements_lock.txt  run_cmake_build.sh  run_cmake_test.sh  run_docker.sh
.github/workflows/: bazelBuildAndTest.yml  buildAndTest.yml  dockerBuildAndTest.yml
build_tools/: autogen_ltc_backend.py
build_tools/docker/: Dockerfile  run_cmake_build.sh  run_cmake_build_oot.sh  run_integration_tests.sh
docs/: development.md
e2e_testing/: xfail_sets.py
lib/Conversion/TorchToTcp/: Elementwise.cpp
python/torch_mlir/extras/: fx_importer.py
test/: lit.cfg.py
test/Conversion/TorchToTcp/: elementwise.mlir
test/python/: test_convnet.py
test/python/fx_importer/: basic_test.py
utils/bazel/: .bazelrc  WORKSPACE.bazel
utils/bazel/docker/: Dockerfile  run_docker.sh
utils/bazel/torch-mlir-overlay/: BUILD.bazel
utils/bazel/torch-mlir-overlay/projects/jit_ir_common/: BUILD.bazel
utils/bazel/torch-mlir-overlay/projects/pt1/python/: BUILD.bazel  symlink_files.bzl
utils/bazel/torch-mlir-overlay/python/: BUILD.bazel
utils/bazel/torch-mlir-overlay/test/: BUILD.bazel
