load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "jit_ir_importer_lib",
    srcs = [
        "csrc/jit_ir_importer/class_annotator.cpp",
        "csrc/jit_ir_importer/function_importer.cpp",
        "csrc/jit_ir_importer/ivalue_importer.cpp",
        "csrc/jit_ir_importer/node_importer.cpp",
        "csrc/jit_ir_importer/torch_to_mlir_utils.cpp",
    ],
    hdrs = [
        "csrc/jit_ir_importer/mlir_utils.h",
        "csrc/jit_ir_importer/ivalue_importer.h",
        "csrc/jit_ir_importer/function_importer.h",
        "csrc/jit_ir_importer/import_options.h",
        "csrc/jit_ir_importer/class_annotator.h",
        "csrc/jit_ir_importer/torch_to_mlir_utils.h",
        "csrc/jit_ir_importer/node_importer.h",
    ],

    strip_include_prefix = "csrc",

    deps = [
        "@llvm-project//mlir:MLIRBindingsPythonHeaders",
        #"@pytorch//:torch_python",
        "//:TorchMLIRCAPIHdrs",
    ]
)
